--- a/src/main/webapp/studentWorks/insertStudent.xhtml
+++ b/src/main/webapp/studentWorks/insertStudent.xhtml
@@ -10,6 +10,7 @@
 
         <ui:composition template="./../template/main_template.xhtml">
 
+            <ui:define name="title">Öğrenci Ekleme Sayfası</ui:define>
 
             <ui:define name="content">
                 <h:form>
